...
            intent.getParcelableExtra(TelegramAuthActivity.EXTRA_AUTH_DATA)
        }
    }
}

internal object SignInTestTags {
    const val NameInput = "nameInput"
    const val EmailInput = "emailInput"
    const val PasswordInput = "passwordInput"
    const val PrimaryActionButton = "primaryActionButton"
    const val SavedCredentialsButton = "savedCredentialsButton"
    const val ToggleModeButton = "toggleModeButton"
}

@Composable
private fun SignInScreen(
    uiState: SignInViewModel.UiState,
    name: String,
...
